force-app/main/default/objects/Daily_Progress__c/Daily_Progress__c.object-meta.xml
<CustomObject>
    <description>Daily site progress entry for a work package. Mobile-friendly capture.</description>
    <label>Daily Progress</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Daily Progress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>