force-app/main/default/objects/Daily_Progress__c/fields/Logged_By__c.field-meta.xml
<CustomField>
    <fullName>Logged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Progress_Logged</relationshipName>
    <type>Lookup</type>
</CustomField>