force-app/main/default/objects/Daily_Progress__c/fields/Percent_Complete_Day__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete_Day__c</fullName>
    <label>% Complete (Day)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>