force-app/main/default/objects/Daily_Progress__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Daily Progress Entries</relationshipLabel>
    <relationshipName>Daily_Progress_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>