force-app/main/default/objects/Daily_Progress__c/fields/Work_Package__c.field-meta.xml
<CustomField>
    <fullName>Work_Package__c</fullName>
    <label>Work Package</label>
    <referenceTo>Work_Package__c</referenceTo>
    <relationshipLabel>Daily Progress Entries</relationshipLabel>
    <relationshipName>Daily_Progress_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>